# NotTwitter

./: pyproject.toml
.github/workflows/: main_drewsexton.yml
authentication/: forms.py  urls.py  views.py
notification/: models.py  urls.py  views.py
notification/migrations/: 0001_initial.py  0002_auto_20210304_0300.py
static/css/: navbar.css  notification.css  profile.css  style.css
staticfiles/css/: profile.css  register.css  style.css
templates/: generic_form.html  homepage.html  index.html  notifications.html  register.html  tweet_details.html  user_detail.html  user_list.html
templates/auth/: generic_form.html
tweet/: forms.py  models.py  urls.py  views.py
tweet/migrations/: 0001_initial.py  0002_tweet_replying_to.py  0003_tweet_replies.py  0004_auto_20210304_1650.py  0005_auto_20210304_1657.py
twitterclone/: settings.py  urls.py
twitteruser/: admin.py  forms.py  models.py  urls.py  views.py
twitteruser/migrations/: 0001_initial.py  0002_remove_twitteruser_following.py  0003_auto_20210305_1902.py  0004_auto_20210305_1944.py  0005_auto_20210305_2053.py  0006_twitteruser_photo_url.py  0007_auto_20210308_0637.py
