[tool.poetry]
name = "twitterclone-thatssometa"
version = "0.1.0"
description = ""
authors = ["Drew Sexton <acsexton@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.7"
pep8 = "^1.7.1"
flake8 = "^3.8.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
